--- a/wa.user.styl
+++ b/wa.user.styl
@@ -31,6 +31,27 @@
 @var text     app_c_m_d  'Compact mode hover-off delay' 1.2s
 
 @var checkbox chat_b_c   'Enable blurred contacts' 0
+
+@var select   app_image  'Custom app background' {
+    'Theme image with 12px blur   *': 'bg-high ',
+    'Theme image with 6px blur     ': 'bg-low  ',
+    'Theme image without blur      ': 'bg-none ',
+    'Custom background image       ': 'custom  ',
+    'Default background            ': 'default ',
+    'None                          ': 'none    ',
+}
+
+@var text     image_url  'Custom background image link' url('https://images.unsplash.com/photo-1434569117012-ce134ee1a088?fit=crop&w=1280&h=720&q=80')
+@var range    bg_opacity 'Background image opacity' [0.4, 0.0, 1, 0.01]
+@var range    bg_blur    'Background image blur size' [0, 0, 50, 1, 'px']
+@var range    bg_hue     'Background image hue' [320, 0, 360, 1, 'deg']
+@var range    bg_invert  'Background image invert colors' [0, 0.0, 1, 0.1]
+@var text     bg_size    'Background image size' cover
+@var text     bg_pos     'Background image position' center
+@var text     bg_rep     'Background image repeat' no-repeat
+
+@var text     divider    '⚠‼ IMPORTANT: Everything below is BROKEN' ''WIP''
+
 @var checkbox chat_b_img 'Enable blurred images/videos' 0
 @var text     chat_b_in  'Images/videos hover-on delay' 0.4s
 @var text     chat_b_out 'Images/videos hover-off delay' 0.2s
@@ -66,23 +87,6 @@
 @var color    b_r_bg     'Right message bubble color' #333a47
 
 @var range    emoji_o    'Emoji default opacity' [0.8, 0.0, 1, 0.01]
-
-@var select   app_image  'Custom app background' {
-    'Theme image with 12px blur   *': 'bg-high ',
-    'Theme image with 6px blur     ': 'bg-low  ',
-    'Theme image without blur      ': 'bg-none ',
-    'Custom background image       ': 'custom  ',
-    'Default background            ': 'default ',
-    'None                          ': 'none    ',
-}
-@var text     image_url  'Custom background image link' url('https://images.unsplash.com/photo-1434569117012-ce134ee1a088?fit=crop&w=1280&h=720&q=80')
-@var range    bg_opacity 'Background image opacity' [0.4, 0.0, 1, 0.01]
-@var range    bg_blur    'Background image blur size' [0, 0, 50, 1, 'px']
-@var range    bg_hue     'Background image hue' [320, 0, 360, 1, 'deg']
-@var range    bg_invert  'Background image invert colors' [0, 0.0, 1, 0.1]
-@var text     bg_size    'Background image size' cover
-@var text     bg_pos     'Background image position' center
-@var text     bg_rep     'Background image repeat' no-repeat
 
 @var checkbox chat_bg    'Enable chat background image' 1
 @var text     chat_image 'Custom image for chat' url('https://web.whatsapp.com/img/bg-chat-tile_9e8a2898faedb7db9bf5638405cf81ae.png')
