--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      2.10.0
+@version      2.11.0
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -731,8 +731,8 @@ define('msg-in'  + key, val) for key, val in msg-in
         --bg-rep       : bg_rep
 
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 2.10.0 — June 6th, 2020';
-        --message: 'Towards v3 of DWA! The last update broke too many things, and we are rewriting core functionality — the dark theme — so that in future updates we can reimplement currently broken DWA features – compact mode, tail styles, "private mode", etc. \A\A Compact mode and custom border radius options are back!';
+        --version: 'Dark-WhatsApp 2.11.0 — June 7th, 2020';
+        --message: 'Towards v3 of DWA! The last update broke too many things, and we are rewriting core functionality — the dark theme — so that in future updates we can reimplement currently broken DWA features – compact mode, tail styles, "private mode", etc. \A\A Fullscreen mode, custom message bubble colors, and blurred contacts are back!';
         --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
 
         /\*{
