global: override dark mode colors as well
This will prevent dark mode variables winning on specificity.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -221,7 +221,7 @@ define('msg-in'  + key, val) for key, val in msg-in
 
 @-moz-document domain('web.whatsapp.com') {
     // V3 exploration.
-    :root:not(#z) {
+    :root:not(#z), .dark:not(#z) {
         /// WA variables.
         --teal: var(--ac-0) //#009688;
         --teal-rgb: var(--ac-0-rgb) //0,150,136;
