vars: forgot to include refactor for rgb variables

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -618,6 +618,7 @@ define('msg-in'  + key, val) for key, val in msg-in
             for _i in 0..5 {
                 /// Escape '\' so that it doesn't error out for `*-0` vars.
                 { '--' + _v + '-' + _i }: _v + \- + _i i
+                { '--' + _v + '-' + _i + '-rgb' }: to_rgb(_v + \- + _i)
             }
         }
 
