--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1083,8 +1083,17 @@ define('msg-in'  + key, val) for key, val in msg-in
         /// Right -> Drawer divider.
         ._14VS3 > ._1V8rX {
             border-left: 1px solid bg-5 i
-            .copyable-area > header {
-                border-bottom: 1px solid bg-5 i
+
+            /// Drawer header.
+            if (app_c_h) {
+                .copyable-area > header {
+                    border-bottom: 1px solid bg-5 i
+                }
+            }
+
+            /// Remove shadows from drawer sections.
+            ._2Bps4 {
+                box-shadow: 0 0 0 1px var(--bg-4) i
             }
         }
     }
