global: fix app wrapper background
This makes it so that opening the 'contact info' drawer doesn't flash
the app background while transition is active.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1056,7 +1056,7 @@ define('msg-in'  + key, val) for key, val in msg-in
 
     // App.
     #app > div > [tabindex] {
-        background: none i
+        c: 0 0 bg-1 i
 
         /// Do not apply tweaks in fullscreen mode.
         @media (min-width: 1441px) {
