--- a/wa.user.styl
+++ b/wa.user.styl
@@ -41,7 +41,7 @@
     'None                          ': 'none    ',
 }
 
-@var text     image_url  'Custom background image link' url('https://images.unsplash.com/photo-1434569117012-ce134ee1a088?fit=crop&w=1280&h=720&q=80')
+@var text     image_url  'Custom background image link' url('https://ibb.co/0h9ssnR')
 @var range    bg_opacity 'Background image opacity' [0.4, 0.0, 1, 0.01]
 @var range    bg_blur    'Background image blur size' [0, 0, 50, 1, 'px']
 @var range    bg_hue     'Background image hue' [320, 0, 360, 1, 'deg']
