--- a/wa.user.styl
+++ b/wa.user.styl
@@ -55,6 +55,15 @@
 
 @var checkbox ff_scroll  'Thin scrollbars in Firefox' 1
 
+@var checkbox chat_bg    'Enable chat background image' 1
+@var text     chat_image 'Custom image for chat' url('https://web.whatsapp.com/img/bg-chat-tile_9e8a2898faedb7db9bf5638405cf81ae.png')
+@var range    chat_bg_o  'Chat background image opacity' [0.15, 0.0, 1, 0.01]
+@var range    chat_bg_i  'Chat background image inverted colors' [0.6, 0.0, 1, 0.1]
+@var text     chat_bg_s  'Chat background image size' initial
+@var text     chat_bg_p  'Chat background image position' top left
+@var text     chat_bg_r  'Chat background image repeat' repeat
+
+
 @var text     divider    '⚠‼ IMPORTANT: Everything below is BROKEN' ''WIP''
 
 @var checkbox chat_b_img 'Enable blurred images/videos' 0
@@ -90,14 +99,6 @@
 }
 @var checkbox chat_b_r   'Custom background for right message bubble' 0
 @var color    b_r_bg     'Right message bubble color' #333a47
-
-@var checkbox chat_bg    'Enable chat background image' 1
-@var text     chat_image 'Custom image for chat' url('https://web.whatsapp.com/img/bg-chat-tile_9e8a2898faedb7db9bf5638405cf81ae.png')
-@var range    chat_bg_o  'Chat background image opacity' [0.15, 0.0, 1, 0.01]
-@var range    chat_bg_i  'Chat background image inverted colors' [0.6, 0.0, 1, 0.1]
-@var text     chat_bg_s  'Chat background image size' initial
-@var text     chat_bg_p  'Chat background image position' top left
-@var text     chat_bg_r  'Chat background image repeat' repeat
 
 @var checkbox ss_mode    '[Dev]: Screenshot mode' 0
 
@@ -708,6 +709,14 @@ define('msg-in'  + key, val) for key, val in msg-in
         --bg-pos       : bg_pos
         --bg-rep       : bg_rep
 
+        /// Feat -> Custom chat background.
+        --chat-image   : chat_image
+        --chat-bg-o    : chat_bg_o
+        --chat-bg-i    : chat_bg_i
+        --chat-bg-s    : chat_bg_s
+        --chat-bg-p    : chat_bg_p
+        --chat-bg-r    : chat_bg_r
+
         /// Userstyle info and announcements.
         --version: 'Dark-WhatsApp 2.11.0 — June 7th, 2020';
         --message: 'Towards v3 of DWA! The last update broke too many things, and we are rewriting core functionality — the dark theme — so that in future updates we can reimplement currently broken DWA features – compact mode, tail styles, "private mode", etc. \A\A Fullscreen mode, custom message bubble colors, and blurred contacts are back!';
@@ -828,11 +837,6 @@ define('msg-in'  + key, val) for key, val in msg-in
                 width: 100%
                 c: black
             }
-        }
-
-        /// Chat image.
-        if(dark(BG)) {
-            [data-asset-chat-background-light] { filter: invert(1) i }
         }
     }
 
@@ -1207,6 +1211,19 @@ define('msg-in'  + key, val) for key, val in msg-in
 
             /// Hide borders.
             &::after { content: unset i }
+        }
+
+        /// Feat -> Custom chat background.
+        /[data-asset-chat-background-light] {
+            filter: invert(var(--chat-bg-i)) opacity(var(--chat-bg-o))
+            background-position: var(--chat-bg-p) i
+            background-repeat: var(--chat-bg-r) i
+            background-size: var(--chat-bg-s) i
+            background: var(--chat-image) i
+            opacity: 1 i
+
+            /// Feat -> Show chat image.
+            if ( chat_bg != 1 ) { display: none i }
         }
 
         /// Tweak text shadow.
